--- a/package.json
+++ b/package.json
@@ -6,25 +6,35 @@
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
+    "iconv-lite": "^0.4.23",
+    "node-fetch": "^2.2.0",
+    "unfetch": "^3.1.0",
     "whatwg-fetch": "^2.0.4",
     "winston": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
+    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.2.0",
+    "eslint-plugin-flowtype": "^2.50.0",
     "file-loader": "^1.1.11",
+    "flow-bin": "^0.77.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.dev.babel.js"
+    "build": "webpack --config webpack.config.dev.babel.js",
+    "debug": "nodemon --watch dist dist/bundle.js"
   },
   "repository": {
     "type": "git",
