--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,7 @@ build/Release
 # Dependency directories
 node_modules/*
 jspm_packages/
-client/build/*
-public/*
+dist/*
 
 # Typescript v1 declaration files
 typings/
@@ -61,7 +60,3 @@ typings/
 
 # next.js build output
 .next
-
-# Personal
-user.config.js
-client_id.json
