--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "finam-export",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "\"# finam-export-js\"",
   "main": "index.js",
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "iconv-lite": "^0.4.23",
     "node-fetch": "^2.2.0",
     "unfetch": "^3.1.0",
-    "whatwg-fetch": "^2.0.4",
-    "winston": "^3.0.0"
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -24,9 +24,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.2.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "file-loader": "^1.1.11",
     "flow-bin": "^0.77.0",
-    "url-loader": "^1.0.1",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.3",
