--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "finam-export",
-  "version": "0.0.1",
+  "name": "finam-export-js",
+  "version": "0.1.3-alpha.0",
   "description": "\"# finam-export-js\"",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "eslint-plugin-prettier": "^2.6.2",
     "iconv-lite": "^0.4.23",
-    "node-fetch": "^2.2.0",
-    "unfetch": "^3.1.0",
-    "whatwg-fetch": "^2.0.4"
+    "node-fetch": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -31,17 +29,21 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.dev.babel.js",
+    "build-dev": "webpack --config webpack.config.dev.babel.js",
+    "build-prod": "webpack --config webpack.config.prod.babel.js",
     "debug": "nodemon --watch dist dist/bundle.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IgorKilipenko/finam-export-js.git"
   },
-  "author": "",
+  "author": "Igor Kilipenko",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IgorKilipenko/finam-export-js/issues"
   },
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/IgorKilipenko/finam-export-js#readme"
 }
