--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "finam-export-js",
-  "version": "0.1.3-alpha.0",
+  "version": "0.1.0-alpha.0",
   "description": "\"# finam-export-js\"",
-  "main": "dist/bundle.js",
+  "main": "dist/finam-export.js",
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
