--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
+    "babylon": "^6.18.0",
     "eslint-plugin-prettier": "^2.6.2",
     "iconv-lite": "^0.4.23",
     "node-fetch": "^2.2.0"
@@ -31,7 +32,7 @@
   "scripts": {
     "build-dev": "webpack --config webpack.config.dev.babel.js",
     "build-prod": "webpack --config webpack.config.prod.babel.js",
-    "debug": "nodemon --watch dist dist/bundle.js"
+    "test": "nodemon --watch dist dist/bundle.js"
   },
   "repository": {
     "type": "git",
