--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babylon": "^6.18.0",
-    "eslint-plugin-prettier": "^2.6.2",
     "iconv-lite": "^0.4.23",
     "node-fetch": "^2.2.0"
   },
@@ -22,8 +21,12 @@
     "babel-preset-flow": "^6.23.0",
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^5.2.0",
+    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "flow-bin": "^0.77.0",
+    "prettier": "1.14.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.3",
@@ -32,7 +35,8 @@
   "scripts": {
     "build-dev": "webpack --config webpack.config.dev.babel.js",
     "build-prod": "webpack --config webpack.config.prod.babel.js",
-    "test": "nodemon --watch dist dist/bundle.js"
+    "test": "nodemon --watch dist dist/bundle.js",
+    "flow": "flow --show-all-errors"
   },
   "repository": {
     "type": "git",
